tests-integration/fixtures/checking/1778816760_higher_rank_newtype_argument_binder/Main.snap
---
source: target/debug/build/tests-integration-6275ac7a2b26d932/out/checking_generated.rs
assertion_line: 28
expression: report
---
Terms
Z3 ::
  forall (@r :: Type) (@mode :: Type) (@a :: Type).
    Aff (a :: Type) -> Z3 (r :: Type) (mode :: Type) (a :: Type)
run ::
  forall (a :: Type).
    (forall (r :: Type) (mode :: Type). Z3 (r :: Type) (mode :: Type) (a :: Type)) ->
    Aff (a :: Type)
Box :: forall (@a :: Type). (a :: Type) -> Box (a :: Type)
unbox :: (forall (a :: Type). Box (a :: Type)) -> (forall (a :: Type). (a :: Type))

Types
Aff :: Type -> Type
Z3 :: Type -> Type -> Type -> Type
Box :: Type -> Type

Roles
Aff = [Nominal]
Z3 = [Phantom, Phantom, Representational]
Box = [Representational]

Diagnostics
error[CannotUnify]: Cannot unify '?5' with '(mode :: Type)'
  --> 9:5..9:11
  |
9 | run (Z3 m) = m
  |     ^~~~~~
error[CannotUnify]: Cannot unify 'Z3 (r :: Type) ?5' with 'Z3 (r :: Type) (mode :: Type)'
  --> 9:5..9:11
  |
9 | run (Z3 m) = m
  |     ^~~~~~
error[CannotUnify]: Cannot unify 'Z3 (r :: Type) ?5 ?6' with 'Z3 (r :: Type) (mode :: Type) (a :: Type)'
  --> 9:5..9:11
  |
9 | run (Z3 m) = m
  |     ^~~~~~
error[CannotUnify]: Cannot unify '(a :: Type)' with '(a :: Type)'
  --> 14:17..14:18
   |
14 | unbox (Box x) = x
   |                 ^
